<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Title Bar -->
    <include
        android:id="@+id/topBar"
        layout="@layout/top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Scrollable Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background">

            <!-- Form Card -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="26dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="590dp"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/label_material_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_up_your_facility"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <!-- Facility Name -->
                    <TextView
                        android:id="@+id/label_facilityName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facility_name"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/label_material_card"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_facilityName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        app:layout_constraintTop_toBottomOf="@id/label_facilityName">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/your_facility_name" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Facility Email -->
                    <TextView
                        android:id="@+id/label_facilityEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facility_email"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/input_facilityName"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_facilityEmail"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        app:layout_constraintTop_toBottomOf="@id/label_facilityEmail">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/your_email_example_org" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Facility Address -->
                    <TextView
                        android:id="@+id/label_facilityAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facility_address"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/input_facilityEmail"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_facilityAddress"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        app:layout_constraintTop_toBottomOf="@id/label_facilityAddress">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minLines="2"
                            android:gravity="top"
                            android:hint="@string/your_facility_address" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Facility Phone -->
                    <TextView
                        android:id="@+id/label_facilityPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facility_phone_optional"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/input_facilityAddress"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_facilityPhone"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        app:layout_constraintTop_toBottomOf="@id/label_facilityPhone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/_123_456_7890" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Create Facility Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_createFacility"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#34C759"
                        android:padding="12dp"
                        android:text="@string/create_facility"
                        app:cornerRadius="8dp"
                        android:layout_marginTop="20sp"
                        app:layout_constraintTop_toBottomOf="@id/input_facilityPhone"
                        tools:layout_editor_absoluteX="16dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <!-- Bottom Navigation
    <include
        android:id="@+id/bottomNavigationViewOrganizer"
        layout="@layout/organizer_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>
-->
</androidx.constraintlayout.widget.ConstraintLayout>