...
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/facility_nameField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:padding="12dp"
                            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                    </com.google.android.material.textfield.TextInputLayout>
...
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/facility_emailField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:textSize="18sp"
                            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                    </com.google.android.material.textfield.TextInputLayout>
...
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/facility_addressField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:textSize="18sp"
                            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                    </com.google.android.material.textfield.TextInputLayout>
...
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/facility_phoneField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:textSize="18sp"
                            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/editFacilityButton"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#34C759"
                    android:padding="12dp"
                    android:text="@string/edit_facility"
...
